<resources>
    <string name="app_name">MansoraInfo</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link1"><![CDATA[https://www.google.com.eg/search?safe=strict&biw=1366&bih=616&q=%D9%83%D8%A7%D9%81%D9%8A%D9%87%D8%A7%D8%AA+%D8%A7%D9%84%D9%85%D9%86%D8%B5%D9%88%D8%B1%D8%A9&npsic=0&rflfq=1&rlha=0&rllag=31041593,31357700,568&tbm=lcl&ved=0ahUKEwie_MylrpncAhUIZ1AKHSTjDmAQjGoIXA&tbs=lrf:!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:9&rldoc=1#rlfi=hd:;si:15475827157452430299;mv:!1m3!1d74050.68743882871!2d31.331564546696995!3d31.061781171377596!3m2!1i401!2i520!4f13.1]]></string>
    <string name="mansCafe">mansoura-gomhoria.st</string>
    <string name="damyeta">damyta-abdrhman.st</string>
    <string name="gamasa">gamasa-e;Gaish.st</string>
    <string name="gamhoria">managua-gomhoria.st</string>
    <string name="newDamyta">damyta-abdrhman.st</string>
    <string name="phone5">01144587559</string>
    <string name="phone4">0101595753</string>
    <string name="phone3">01515663355</string>
    <string name="phone2">01144587559</string>
    <string name="phone1">0101595753</string>
    <string name="linkF1">http://origo-kaffee.eg/</string>
    <string name="linkF2">https://www.facebook.com/StereoRestaurant/info/?tab=page_info</string>
    <string name="linkF3">https://www.facebook.com/Bob-Marley-Cafe-257873457702547/</string>
    <string name="linkF4">https://www.facebook.com/stoneyardEG/</string>
    <string name="linkF">http://www.cinnabon-egypt.com/</string>
    <string name="namecofe5">Cinnabon</string>
    <string name="namecofe4">Coffee lounge</string>
    <string name="namecofe3">Bob Marley Cafe</string>
    <string name="namecofe2">Bicafe Mansoura</string>
    <string name="namecofe">Origo Cafe</string>
    <string name="gomst">gomhoria.st</string>
    <string name="abdr7mn">abdrhman.st</string>
    <string name="geish">gamasaGaish.st</string>
    <string name="mansGom">mansgomhoria.st</string>
    <string name="newDam">damabdrhman.st</string>
    <string name="ph1">0115495753</string>
    <string name="ph2">01144580029</string>
    <string name="ph3">015156111355</string>
    <string name="ph4">0103335753</string>
    <string name="ph5">01144584449</string>
    <string name="cibonMans">CibonMans</string>
    <string name="Longe">lounge</string>
    <string name="marly">Bob MaCafe</string>
    <string name="BicMans">BicMansoura</string>
    <string name="orica">OriCafe</string>
    <string name="link3"><![CDATA[https://www.google.com.eg/search?safe=strict&biw=1366&bih=616&q=%D9%83%D8%A7%D9%81%D9%8A%D9%87%D8%A7%D8%AA+%D8%A7%D9%84%D9%85%D9%86%D8%B5%D9%88%D8%B1%D8%A9&npsic=0&rflfq=1&rlha=0&rllag=31041593,31357700,568&tbm=lcl&ved=0ahUKEwie_MylrpncAhUIZ1AKHSTjDmAQjGoIXA&tbs=lrf:!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:9&rldoc=1#rlfi=hd:;si:15475827157452430299;mv:!1m3!1d74050.68743882871!2d31.331564546696995!3d31.061781171377596!3m2!1i401!2i520!4f13.1]]></string>
    <string name="name_Dr1">ahmed ali</string>
    <string name="name_Dr2">alaa hassan</string>
    <string name="name_Dr3">mohamed alaa</string>
    <string name="name_Dr4">ahmed ali</string>
    <string name="name_Dr5">alaa hassan</string>
    <string name="name_Dr6">mohamed alaa</string>
    <string name="gamsa">gamasaGaish.st</string>
    <string name="rahmnSt">damyta-abdrhman.st</string>
    <string name="gomSt">mansoura-gomhoria.st</string>
    <string name="gishst">gamasa-e;Gaish.st</string>
    <string name="gaishSt">damyta-abdrhman.st</string>
    <string name="oricaSt">mansoura-gomhoria.st</string>
    <string name="phDr1">0101515453</string>
    <string name="phDr">01141877559</string>
    <string name="phDr2">01515661540</string>
    <string name="phDr3">01015111123</string>
    <string name="phDr4">01144582222</string>
    <string name="phDr5">01515664444</string>
    <string name="aboutInfo">Mansoura was established in 1219 by al-Kamil of the Ayyubid dynasty. After the Egyptians defeated the Crusaders during the Sixth Crusade, it was named Mansoura (aka. The Victorious In the Seventh Crusade, the Capetians were defeated and put to flight; between fifteen and thirty thousand of their men fell on the battlefield. Louis IX of France was captured in the main Battle of Mansoura, and confined in the house of Ibrahim ben Lokman, secretary of the sultan, and under the guard of the eunuch Sobih. The king\'s brother was imprisoned in the same house. The sultan provided for their sustenance. The house of Ibrahim ben Lokman is now the only museum in Mansoura. It is open to the public and houses articles that used to belong to the French monarch, including his personal thirteenth century toilet.\"</string>
    <string name="Link5">https://en.wikipedia.org/wiki/Mansoura,_Egypt</string>
    <string name="ori1">Origo Cafe</string>
    <string name="becaf">Bicafe Mansoura</string>
    <string name="bobMar">Bob Marley Cafe</string>
    <string name="lounge">Coffee lounge</string>
    <string name="cina">Cinnabon</string>
    <string name="linkCofe5">https://www.facebook.com/Bob-Marley-Cafe-257873457702547/</string>
    <string name="linkCofe4">https://www.facebook.com/stoneyardEG/</string>
    <string name="linkCofe3">http://www.cinnabon-egypt.com/</string>
    <string name="linkCofe2">https://www.facebook.com/StereoRestaurant/info/?tab=page_info</string>
    <string name="linkCofe1">http://origo-kaffee.eg/</string>
    <string name="phoneCofe5">01144000559</string>
    <string name="phoneCofe4">01000595753</string>
    <string name="phoneCofe">0160063355</string>
    <string name="phoneCofe1">0114401087559</string>
    <string name="phoneCofe2">0101595000</string>
    <string name="mansSt">mansourast</string>
    <string name="damAbdSt">damyta-abdrhman.st</string>
    <string name="gaishStter">gamasa-e;Gaish.st</string>
    <string name="amsd">mansoura-gomhoria.st</string>
    <string name="manRst">damyta-abdrhman.st</string>
    <string name="linlWiki"><![CDATA[https://www.google.com.eg/search?safe=strict&biw=1366&bih=616&q=%D9%83%D8%A7%D9%81%D9%8A%D9%87%D8%A7%D8%AA+%D8%A7%D9%84%D9%85%D9%86%D8%B5%D9%88%D8%B1%D8%A9&npsic=0&rflfq=1&rlha=0&rllag=31041593,31357700,568&tbm=lcl&ved=0ahUKEwie_MylrpncAhUIZ1AKHSTjDmAQjGoIXA&tbs=lrf:!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:9&rldoc=1#rlfi=hd:;si:15475827157452430299;mv:!1m3!1d74050.68743882871!2d31.331564546696995!3d31.061781171377596!3m2!1i401!2i520!4f13.1]]></string>
    <string name="cofee">CoFFee</string>
    <string name="valueOfCofe">valueOfCofe</string>
    <string name="places_to_enjoy">places to Enjoy</string>
    <string name="medical_place">Medical place</string>
    <string name="important_details">Important details</string>
    <string name="about_city3">About City</string>
    <string name="go_to_web_page">go to web page</string>
    <string name="go_to_maps2">go to maps</string>
    <string name="about_city">About City</string>
    <string name="source_of_information">Source of information</string>
    <string name="tempreture">Tempreture</string>
    <string name="_32">32 ْ</string>
    <string name="wind">Wind</string>
    <string name="wnw_14_kph">WNW 14 Kph</string>
    <string name="mostly_sunny">Mostly Sunny</string>
    <string name="go_to_maps">go to maps</string>
    <string name="welcom_to">Welcom To ..</string>
    <string name="important_detailso">important details</string>
    <string name="naps">go to maps</string>
    <string name="restRunt">Restrunt</string>
    <string name="Public_Places">Public Places</string>
    <string name="valueOfCofe2">valueOfCofe</string>
    <string name="colorWhite">#ffffff</string>
    <string name="colorRed">#ff787a</string>
</resources>
