<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_places"
            android:title="@string/places_to_enjoy" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/med"
            android:title="@string/medical_place" />
        <item
            android:id="@+id/important_detailsId"
            android:icon="@mipmap/ic_important"
            android:title="@string/important_details" />
        <item
            android:id="@+id/aboutId"
            android:icon="@mipmap/ic_information"
            android:title="@string/about_city" />
    </group>


</menu>
